--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,4 +11,5 @@ add_executable(meta_attacker
         src/meta_attacker.hpp
         src/module_list.cpp
         src/death_ping.cpp
-        src/HttpAttack.cpp)
+        src/HttpAttack.cpp
+        src/TcpFlood.cpp)
